Fix new library version compatibility automation